# opencv

./: CMakeLists.txt  detect.cpp  face_detect.cpp  haha.cpp  main.cpp
